--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,7 +1,14 @@
-.footer {
-  position: relative;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
-  margin: 50px 0 0 0;
+body {
+    background-image: url("confectionary.png");
 }
+
+.footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#101010;
+   color:#9d9d9d;
+}
+
+
