--- a/app/views/availabilities/_form.html.erb
+++ b/app/views/availabilities/_form.html.erb
@@ -1,16 +1,17 @@
 <%= simple_form_for(@availability) do |f| %>
-  <%= f.error_notification %>
+<%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :walker_sitter %>
-    <%= f.input :available_from %>
-    <%= f.input :available_location %>
-    <%= f.input :available_to %>
-    <%= f.input :dog_size %>
-  </div>
+<div class="form-inputs">
+  <%= f.input :name %>
+  <%= f.input :walker_sitter %>
+  <%= f.input :available_from %>
+  <%= f.input :available_location %>
+  <%= f.input :available_to %>
+  <%= f.input :dog_size %>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+<div class="form-actions">
+  <%= f.button :submit, class: 'btn btn-success'%>
+</div>
+
 <% end %>
