--- a/app/views/availabilities/index.html.erb
+++ b/app/views/availabilities/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Availabilities</h1>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <th>Name</th>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Availability', new_availability_path %>
+<%= link_to 'New Availability', new_availability_path, class: 'btn btn-success' %>
