--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,16 +1,18 @@
 <%= simple_form_for(@job) do |f| %>
-  <%= f.error_notification %>
+<%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :job_type %>
-    <%= f.input :drop_off_time %>
+<div class="form-inputs row">
+  <div class="col-md-6">
     <%= f.input :drop_off_location %>
-    <%= f.input :pick_up_time %>
+    <%= f.input :drop_off_time %>
+  </div>
+  <div class="col-md-6">
     <%= f.input :pick_up_location %>
+    <%= f.input :pick_up_time %>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+<div class="form-actions">
+  <%= f.button :submit, class: 'btn btn-success'%>
+</div>
 <% end %>
