--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.label :password %><br>
     <%= f.text_field :password %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class="form-actions">
+  <%= f.button :submit, class: 'btn btn-success'%>
+</div>
 <% end %>
