--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Find an Amazonian to walk or sit your pup</h1>
-
+<h1>Find an Amazonian to walk your pup</h1>
+<br>
 <%= render partial: 'jobs/form' %>
