--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Person</h1>
+<h1>Create a Profile</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', people_path %>
+...or, if you already have a profile
+
+<%= link_to 'Sign in', %>
