--- a/app/views/pups/show.html.erb
+++ b/app/views/pups/show.html.erb
@@ -6,13 +6,58 @@
 </p>
 
 <p>
+  <strong>Breed:</strong>
+  <%= @pup.breed %>
+</p>
+
+<p>
+  <strong>Weight:</strong>
+  <%= @pup.weight %>
+</p>
+
+<p>
   <strong>Gender:</strong>
   <%= @pup.gender %>
 </p>
 
 <p>
-  <strong>Age:</strong>
-  <%= @pup.age %>
+  <strong>Birthday:</strong>
+  <%= @pup.birthday %>
+</p>
+
+<p>
+  <strong>Picture:</strong>
+  <%= @pup.picture %>
+</p>
+
+<p>
+  <strong>Tracking chip:</strong>
+  <%= @pup.tracking_chip %>
+</p>
+
+<p>
+  <strong>Neutered:</strong>
+  <%= @pup.neutered %>
+</p>
+
+<p>
+  <strong>Good w dogs:</strong>
+  <%= @pup.good_w_dogs %>
+</p>
+
+<p>
+  <strong>Special requirements:</strong>
+  <%= @pup.special_requirements %>
+</p>
+
+<p>
+  <strong>Care instructions:</strong>
+  <%= @pup.care_instructions %>
+</p>
+
+<p>
+  <strong>Vet phone:</strong>
+  <%= @pup.vet_phone %>
 </p>
 
 <%= link_to 'Edit', edit_pup_path(@pup) %> |
