--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,29 +1,19 @@
-<%= form_for(@person) do |f| %>
-  <% if @person.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@person.errors.count, "error") %> prohibited this person from being saved:</h2>
+<%= simple_form_for(@person) do |f| %>
+  <%= f.error_notification %>
 
-      <ul>
-      <% @person.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <div class="form-inputs">
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :building %>
+    <%= f.input :address %>
+    <%= f.input :email %>
+    <%= f.input :phone %>
+    <%= f.input :emergency_phone %>
+    <%= f.input :pup_parent %>
+    <%= f.input :pup_provider %>
+  </div>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-actions">
+    <%= f.button :submit %>
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br>
-    <%= f.text_field :password %>
-  </div>
-<div class="form-actions">
-  <%= f.button :submit, class: 'btn btn-success'%>
-</div>
 <% end %>
