--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -2,12 +2,18 @@
 
 <h1>Listing People</h1>
 
-<table class='table'>
+<table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>First name</th>
+      <th>Last name</th>
+      <th>Building</th>
+      <th>Address</th>
       <th>Email</th>
-      <th>Password</th>
+      <th>Phone</th>
+      <th>Emergency phone</th>
+      <th>Pup parent</th>
+      <th>Pup provider</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,9 +21,15 @@
   <tbody>
     <% @people.each do |person| %>
       <tr>
-        <td><%= person.name %></td>
+        <td><%= person.first_name %></td>
+        <td><%= person.last_name %></td>
+        <td><%= person.building %></td>
+        <td><%= person.address %></td>
         <td><%= person.email %></td>
-        <td><%= person.password %></td>
+        <td><%= person.phone %></td>
+        <td><%= person.emergency_phone %></td>
+        <td><%= person.pup_parent %></td>
+        <td><%= person.pup_provider %></td>
         <td><%= link_to 'Show', person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
