--- a/app/views/pups/index.html.erb
+++ b/app/views/pups/index.html.erb
@@ -6,8 +6,17 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Breed</th>
+      <th>Weight</th>
       <th>Gender</th>
-      <th>Age</th>
+      <th>Birthday</th>
+      <th>Picture</th>
+      <th>Tracking chip</th>
+      <th>Neutered</th>
+      <th>Good w dogs</th>
+      <th>Special requirements</th>
+      <th>Care instructions</th>
+      <th>Vet phone</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,8 +25,17 @@
     <% @pups.each do |pup| %>
       <tr>
         <td><%= pup.name %></td>
+        <td><%= pup.breed %></td>
+        <td><%= pup.weight %></td>
         <td><%= pup.gender %></td>
-        <td><%= pup.age %></td>
+        <td><%= pup.birthday %></td>
+        <td><%= pup.picture %></td>
+        <td><%= pup.tracking_chip %></td>
+        <td><%= pup.neutered %></td>
+        <td><%= pup.good_w_dogs %></td>
+        <td><%= pup.special_requirements %></td>
+        <td><%= pup.care_instructions %></td>
+        <td><%= pup.vet_phone %></td>
         <td><%= link_to 'Show', pup %></td>
         <td><%= link_to 'Edit', edit_pup_path(pup) %></td>
         <td><%= link_to 'Destroy', pup, method: :delete, data: { confirm: 'Are you sure?' } %></td>
