--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -21,11 +21,6 @@
 </p>
 
 <p>
-  <strong>Email:</strong>
-  <%= @person.email %>
-</p>
-
-<p>
   <strong>Phone:</strong>
   <%= @person.phone %>
 </p>
@@ -45,4 +40,5 @@
   <%= @person.pup_provider %>
 </p>
 
-<%= link_to 'Edit', edit_person_path(@person) %>
+<%= link_to 'Edit', edit_person_path(@person) %> |
+<%= link_to 'Back', people_path %>
