--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -3,12 +3,21 @@ body {
 }
 
 .footer {
-   position:absolute;
+   position:relative;
    bottom:0;
    width:100%;
    height:60px;   /* Height of the footer */
    background:#101010;
    color:#9d9d9d;
+}
+
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
 }
 
 
