--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,12 @@
     </nav> 
     <!-- end navbar -->
 
+    <% if notice.present? %>
+    <p class="alert alert-info"><%= notice %></p>
+    <% end %>
+    <% if alert.present? %>
+    <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
 
     <div class="row">
       <div class="col-md-2">
@@ -45,17 +51,13 @@
       </div>     
     </div>
 
-    <% if notice.present? %>
-    <p class="alert alert-info"><%= notice %></p>
-    <% end %>
-    <% if alert.present? %>
-    <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-
     
-    <footer class="footer">
-        <p>Stuff goes down here. &copy 2015, etc.</p>
-    </footer>
+    <br>
+    <br>
+    <br>
+<!--     <footer class="footer">
+        <p>Footer stuff goes down here. &copy 2015, etc.</p>
+    </footer> -->
         
 
 
