removing pup object to simplify

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'My pup needs a walk too!', new_pup_path %>
-
+<%= link_to 'Post a job', new_pup_path, class: 'btn btn-success' %>
 <br>
 
 <h1>Let's go for a walk!</h1>
