--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">Pups needing a walk</a></li>
+            <li><a href="#">Link</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right"> 
             <% if user_signed_in? %>
@@ -54,11 +54,11 @@
     <br>
     <br>
     <br>
-<!--     <footer class="footer">
-        <p>Footer stuff goes down here. &copy 2015, etc.</p>
-    </footer> -->
-        
-
+    <!--     
+<footer class="footer">
+<p>Footer stuff goes down here. &copy 2015, etc.</p>
+</footer> 
+-->
 
   </body>
 </html>
