--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>Register</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= f.error_notification %>
@@ -8,10 +8,15 @@
   <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
   <%= f.input :password_confirmation, required: true %>
 </div>
+<br>
+<h2>Add your pup</h2>
 <div class="form-inputs">
-  <%= f.input :
+  <%= f.input :pup_name %>
+  <%= f.input :pup_breed %>
+  <%= f.input :pup_weight %>
+  <%= f.input :pup_gender %>
 </div>
-
+<br>
 <div class="form-actions">
   <%= f.button :submit, "Sign up" %>
 </div>
