--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -2,6 +2,23 @@
 <%= f.error_notification %>
 
 <div class="form-inputs row">
+    <div class="col-md-6">
+    <%= f.input :pup_name %>
+    <%= f.input :pup_breed %>
+    <%= f.input :pup_weight %>
+  </div>
+    <div class="col-md-6">
+    <%= f.input :pup_gender %>
+    <%= f.input :pup_age %>
+    <%= f.input :pup_vet_phone %>
+  </div>
+</div>
+<div class="form-inputs row">
+    <div class="col-md-12">
+      <%= f.input :pup_care_instructions %>
+  </div>
+</div>
+<div class="form-inputs row">
   <div class="col-md-6">
     <%= f.input :drop_off_location %>
     <%= f.input :drop_off_time %>
@@ -17,3 +34,7 @@
 </div>
 
 <% end %>
+
+
+
+
