user signed in/out logic around creating/editing a job

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,21 +1,25 @@
-<%= link_to 'New Job', new_job_path %>
+<%= link_to 'New Job', new_job_path, class: 'btn btn-primary'  %>
 
 <h1>Let's go for a walk!</h1>
 
 <% @jobs.each do |job| %>
-<div class="booyah-box">
-  <p><strong></strong></p>
-  <p>Pick me up: <%= job.drop_off_time %> at <%= job.drop_off_location %></p>
-  <p>Drop me off: <%= job.pick_up_time %> at <%= job.pick_up_location %></p>
-  <br>
-  <br>
-  <!-- if person is logged in alter a record they created -->
-  <%= link_to 'Edit', edit_job_path(job) %>
-  <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' } %>
-  <br>
-  <br>
-  <%= link_to 'I want to walk your pup!', root_path, class: 'btn btn-success' %>
 
+<div class="booyah-box">
+  <% job.attributes.each do |key, value| %>
+  <p><strong><%= key %>: </strong><%= value %></p>
+  <% end %>
+
+  <% if job.user == current_user %>
+  <br>  
+  <%= link_to 'Edit', edit_job_path(job), class: 'btn btn-warning'%>
+  <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+  <br>
+  <% end %>
+  
+  <br>
+  <%= link_to 'I want to walk your pup!', user_signed_in? ? root_path : user_session_path, class: 'btn btn-success' %>
 </div>
+
+<br>
 <% end %>
 
