--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">Link</a></li>
+            <li><a href="#"></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right"> 
             <% if user_signed_in? %>
