--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -17,7 +17,9 @@
   <% end %>
   
   <br>
-  <%= link_to 'I want to walk your pup!', user_signed_in? ? root_path : user_session_path, class: 'btn btn-success' %>
+  <%= link_to 'I want to walk your pup!', user_signed_in? ? root_path : user_session_path, 
+    data: { confirm: 'Okay to send a walk request to the pup\'s owner?' }, 
+    class: 'btn btn-success' %>
 </div>
 
 <br>
