--- a/app/views/walk_request/send_request_email.html.erb
+++ b/app/views/walk_request/send_request_email.html.erb
@@ -5,7 +5,10 @@
   </head>
   <body>
     <h1>Somebody wants to take your pup for a walk!</h1>
-    <p>accept button</p>
-    <p>deny button</p>
+    <br>  
+    <%= jobs_url(host: 'example.com', controller: 'jobs', action: 'update', request_approved: true)  %>
+    <br>
+    <%= jobs_url(host: 'example.com', controller: 'jobs', action: 'update', request_approved: false) %>
+    <br>
   </body>
 </html>
