--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -30,7 +30,7 @@
     </div>
     <% end %>
 
-    <% if job.user == current_user && user_signed_in? %>
+    <% if job.user == current_user %>
     <div class="col-md-6">
       <%= link_to 'Edit', edit_job_path(job), class: 'btn btn-warning'%>
       <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
