--- a/app/views/walk_request/_walk_request_details.html.erb
+++ b/app/views/walk_request/_walk_request_details.html.erb
@@ -1,3 +1,6 @@
+<p><strong>Pup owner: <%= @job.user.email %></strong></p>
+<p><strong>Walker: <%= @walker.email %></strong></p>
+<br>
 <p>Drop off: <%= @job.drop_off_time.to_formatted_s(:long_ordinal) %></p>
 <p>Place: <%= @job.drop_off_location %></p>
 <p>Pick up: <%= @job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
