add Cancel Walk functionality

--- a/app/views/walk_request/walk_request.html.erb
+++ b/app/views/walk_request/walk_request.html.erb
@@ -6,3 +6,5 @@
   <%= link_to 'Decline', job_deny_walk_request_url(@job.id, id: @job.id) %>
   </strong></p>
 <%= render 'walk_request_details' %>
+<br>
+<%= render 'walk_request_cancel' %>
