--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right"> 
             <% if user_signed_in? %>
+            <li><%#= link_to 'Upcoming Walks', user_path(current_user) %>
             <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
             <% else %>
             <li><%= link_to 'Sign in', new_user_session_path %></li>
