--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,20 @@
+<h1>Profile</h1>
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
+<p><strong>First name:</strong><%= @user.first_name %></p>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
+<p><strong>Last name:</strong><%= @user.last_name %></p>
 
-<p>
-  <strong>Building:</strong>
-  <%= @user.building %>
-</p>
+<p><strong>Email:</strong><%= @user.email %></p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @user.address %>
-</p>
+<p><strong>Phone:</strong><%= @user.phone %></p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @user.phone %>
-</p>
-
-<p>
-  <strong>Emergency phone:</strong>
-  <%= @user.emergency_phone %>
-</p>
-
-<p>
-  <strong>Parent:</strong>
-  <%= @user.parent %>
-</p>
-
-<p>
-  <strong>Walker:</strong>
-  <%= @user.walker %>
-</p>
+<p><strong>Emergency phone:</strong><%= @user.emergency_phone %></p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+
+<h1>Upcoming Walks</h1>
+
+<%= Job.where(walker_id: current_user) %>
