--- a/app/views/walk_request/_walk_request_cancel.html.erb
+++ b/app/views/walk_request/_walk_request_cancel.html.erb
@@ -1,5 +1,5 @@
 
 <p><strong>
-  <%= link_to 'Cancel Walk', job_cancel_walk_url(@job.id, id: @job.id) %>
+  <%= link_to 'Cancel Walk', cancel_walk_job_url(@job) %>
   </strong></p>
 
