minor bug fixes

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,6 +1,17 @@
 <%= simple_form_for(@job) do |f| %>
 <%= f.error_notification %>
 
+<br>
+
+<div class="form-inputs row">
+  <div class="col-md-6">
+    User selects pups here:
+    Radio buttons
+  </div>
+</div>
+
+<br>
+
 <div class="form-inputs row">
   <div class="col-md-6">
     <%= f.input :drop_off_location %>
