--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,12 +1,12 @@
 body {
-    background-image: url("confectionary.png");
+    background: image-url('fabric_plaid.png');
 }
 
 .footer {
    position:relative;
    bottom:0;
    width:100%;
-   height:60px;   /* Height of the footer */
+   height:60px;
    background:#101010;
    color:#9d9d9d;
 }
