add pup form and ensure associations solidified on creation

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -5,10 +5,7 @@
 
 <div class="form-inputs row">
   <div class="col-md-6">
-    <%# TO BE CODED: f.collection_radio_buttons :options, %>
-    <% current_user.pups.each do |pup| %>
-    <p><%= f.input pup.pup_name %></p>
-    <% end %>
+    Pup radio buttons go here...
   </div>
 </div>
 
