--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,6 +8,7 @@
 
   <div class="row">
     <div class="col-md-6"> <!-- replicating this code in the mailer view -->
+      <p>Name: <%= job.pup.pup_name %>
       <p>Drop off: <%= job.drop_off_time.to_formatted_s(:long_ordinal) %></p>
       <p>Place: <%= job.drop_off_location %></p>
       <p>Pick up: <%= job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
@@ -28,15 +29,15 @@
       <% end %>
     </div>
 
-    <% if job.user == current_user %>
-    <div class="col-md-6">
-      <%= link_to 'Edit', edit_job_path(job), class: 'btn btn-warning'%>
-      <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+    <div>
+      <% if job.user == current_user %>
+      <div class="col-md-6">
+        <%= link_to 'Edit', edit_job_path(job), class: 'btn btn-warning'%>
+        <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+      </div>
+      <% end %>
     </div>
     <% end %>
+    
   </div>
-</div>
-
-<br>
-<% end %>
 
