--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -29,15 +29,19 @@
       <% end %>
     </div>
 
-    <div>
+    <div class="col-md-6">
       <% if job.user == current_user %>
-      <div class="col-md-6">
-        <%= link_to 'Edit', edit_job_path(job), class: 'btn btn-warning'%>
-        <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-      </div>
+      <%= link_to 'Edit', edit_job_path(job), class: 'btn btn-warning'%>
+      <%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
       <% end %>
     </div>
-    <% end %>
-    
-  </div>
+  </div> <!-- row -->
+
+</div> <!--booyah-box-->
+
+<br>
+
+<% end %>
+
+
 
