add pic uploading for pup object

--- a/app/views/pups/_form.html.erb
+++ b/app/views/pups/_form.html.erb
@@ -19,6 +19,7 @@
 <div class="form-inputs row">
   <div class="col-md-12">
     <%= f.input :pup_care_instructions %>
+    <%= f.input :pup_pic %>
   </div>
 </div>
 
