--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,12 +7,16 @@
 <div class="booyah-box">
 
   <div class="row">
-    <div class="col-md-6"> <!-- replicating this code in the mailer view -->
+    <div class="col-md-6">
       <p>Name: <%= job.pup.pup_name %>
       <p>Drop off: <%= job.drop_off_time.to_formatted_s(:long_ordinal) %></p>
       <p>Place: <%= job.drop_off_location %></p>
       <p>Pick up: <%= job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
       <p>Place: <%= job.pick_up_location %></p>
+    </div>
+    
+    <div class="col-md-6">
+      <%= image_tag job.pup.pup_pic, :class => 'img-responsive' %>
     </div>
   </div>
 
