--- a/app/views/pups/index.html.erb
+++ b/app/views/pups/index.html.erb
@@ -18,13 +18,18 @@
       <p>Vet phone: <%= pup.pup_vet_phone %></p>
       <p>Care notes: <%= pup.pup_care_instructions %></p>
     </div>
+
+    <div class="col-md-6">
+      <%= image_tag pup.pup_pic, :class => 'img-responsive' %>
+    </div>
+
   </div>
 
   <%= link_to 'Edit', edit_user_pup_path(current_user, pup), class: 'btn btn-warning' %>
   <%= link_to 'Destroy', user_pup_path(current_user, pup), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>
 </div>
-  <br>
-  <br>
+<br>
+<br>
 <% end %>
 
 <br>
